--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,22 @@
-version: "3"
-services:
-  server:
-    build: .
-    container_name: bia
-    ports:
-      - 3001:8080
-    links:
-      - database
-    environment:
-      DB_USER: postgres
-      DB_PWD: postgres
-      DB_HOST: database
-      DB_PORT: 5432
-  database:
-    image: postgres:16.1
-    container_name: database
-    environment:
-      - "POSTGRES_USER=postgres"
-      - "POSTGRES_PASSWORD=postgres"
-      - "POSTGRES_DB=bia"
-    ports:
-      - 5433:5432
-    volumes:
-      - db:/var/lib/postgresql/data
-volumes:
-  db:
+FROM node:21-slim
+
+RUN npm install -g npm@latest --loglevel=error
+WORKDIR /usr/src/app
+
+COPY package*.json ./
+
+RUN npm install --loglevel=error
+
+COPY . .
+
+RUN NODE_OPTIONS=--openssl-legacy-provider REACT_APP_API_URL=https://meddifluxp.hardcloud.com.br SKIP_PREFLIGHT_CHECK=true npm run build --prefix client
+
+RUN mv client/build build
+
+RUN rm  -rf client/*
+
+RUN mv build client/
+
+EXPOSE 8080
+
+CMD [ "npm", "start" ]
