--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,27 +1,18 @@
 version: 0.2
 
 phases:
-  pre_build:
-    commands:
-      - echo Fazendo login no ECR...
-      - aws --version
-      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 864981753284.dkr.ecr.us-east-1.amazonaws.com
-      - REPOSITORY_URI=864981753284.dkr.ecr.us-east-1.amazonaws.com/meddiflux
-      - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-      - IMAGE_TAG=${COMMIT_HASH:=latest}
-  build:
-    commands:
-      - echo Build iniciado em `date`
-      - echo Gerando imagem da BIA...
-      - docker build -t $REPOSITORY_URI:latest .
-      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
-  post_build:
-    commands:
-      - echo Build finalizado com sucesso em `date`
-      - echo Fazendo push da imagem para o ECR...
-      - docker push $REPOSITORY_URI:latest
-      - docker push $REPOSITORY_URI:$IMAGE_TAG
-      - echo Gerando artefato da imagem para o Elastic Beanstalk
-      - zip -r meddiflux.zip docker-compose.yml  
-artifacts:
-    files: meddiflux.zip
+    install:
+          commands:
+                  - echo Instalando Node 21 e npm...
+                  - curl -fsSL https://rpm.nodesource.com/setup_21.x | sudo bash -
+                  - sudo yum install -y nodejs
+                  - versao=$(git rev-parse HEAD | cut -c 1-7)
+                  - echo TAG=$versao >> .env
+    build:
+          commands:
+                  - versao=$(git rev-parse HEAD | cut -c 1-7)
+                  - echo TAG=$versao >> .env
+                  - npm install --loglevel=error
+                  - REACT_APP_API_URL=https://hom.projeto-aws.com.br SKIP_PREFLIGHT_CHECK=true npm run build --prefix client
+                  - echo Rodando testes unitarios...
+                  - npm test
