--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,23 @@
-services:
-    server:
-          env_file: .env
-          build: .
-          container_name: meddiflux
-          ports:
-           - 80:8080
+
+FROM node:21-slim
+
+RUN npm install -g npm@latest --loglevel=error
+WORKDIR /usr/src/app
+
+COPY package*.json ./
+
+RUN npm install --loglevel=error
+
+COPY . .
+
+RUN REACT_APP_API_URL=https://meddifluxp.hardcloud.com.br SKIP_PREFLIGHT_CHECK=true npm run build --prefix client
+
+RUN mv client/build build
+
+RUN rm  -rf client/*
+
+RUN mv build client/
+
+EXPOSE 8080
+
+CMD [ "npm", "start" ]
