--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,9 @@
-
-FROM node:21-slim
-
-RUN npm install -g npm@latest --loglevel=error
-WORKDIR /usr/src/app
-
-COPY package*.json ./
-
-RUN npm install --loglevel=error
-
-COPY . .
-
-RUN REACT_APP_API_URL=https://meddifluxp.hardcloud.com.br SKIP_PREFLIGHT_CHECK=true npm run build --prefix client
-
-RUN mv client/build build
-
-RUN rm  -rf client/*
-
-RUN mv build client/
-
-EXPOSE 8080
-
-CMD [ "npm", "start" ]
+services:
+  server:
+    env_file: .env
+    image: 864981753284.dkr.ecr.us-east-1.amazonaws.com/meddiflux:latest
+    ports:
+      - mode: ingress
+        target: 8080
+        published: "80"
+        protocol: tcp
