--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,5 +21,11 @@ phases:
       - echo Fazendo push da imagem para o ECR...
       - docker push $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
+      - versao=$(git rev-parse HEAD | cut -c 1-7)
+      - echo TAG=$versao >> .env
+      - docker compose -f docker-compose-eb.yml config --no-normalize >> docker-compose-dev.yml
+      - sed -i '/^name:/d' docker-compose-dev.yml
+      - sed -i '/server:$/a \    env_file: .env' docker-compose-dev.yml
+      - mv docker-compose-dev.yml docker-compose.yml
 artifacts:
     files: docker-compose.yml
