--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,8 +21,10 @@ phases:
       - echo Fazendo push da imagem para o ECR...
       - docker push $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
+      - echo $ambienteurl
+      - echo $ambientes3cdn  
       - npm install  
-      - NODE_OPTIONS=--openssl-legacy-provider REACT_APP_API_URL=https://meddifluxh.hardcloud.com.br SKIP_PREFLIGHT_CHECK=true npm run build --prefix client
+      - NODE_OPTIONS=--openssl-legacy-provider REACT_APP_API_URL=$ambienteurl SKIP_PREFLIGHT_CHECK=true npm run build --prefix client
       - aws s3 sync client/build s3://assetseb/$ambientes3cdn --exclude "index.html"
       - aws s3 sync client/build s3://assetseb/$ambientes3cdn --exclude "*" --include "index.html"
 artifacts:
