--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,9 +21,11 @@ phases:
       - echo Fazendo push da imagem para o ECR...
       - docker push $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
-      - npm install  
-      - NODE_OPTIONS=--openssl-legacy-provider REACT_APP_API_URL=https://meddifluxp.hardcloud.com.br SKIP_PREFLIGHT_CHECK=true npm run build --prefix client
-      - aws s3 sync client/build s3://assetseb/prod --exclude "index.html"
-      - aws s3 sync client/build s3://assetseb/prod --exclude "*" --include "index.html"
+      - echo $ambienteurl
+      - echo $ambientes3cdn  
+      - npm install
+      - NODE_OPTIONS=--openssl-legacy-provider REACT_APP_API_URL=$ambienteurl SKIP_PREFLIGHT_CHECK=true npm run build --prefix client
+      - aws s3 sync client/build s3://assetseb/$ambientes3cdn --exclude "index.html"
+      - aws s3 sync client/build s3://assetseb/$ambientes3cdn --exclude "*" --include "index.html"
 artifacts:
     files: docker-compose.yml
