--- a/buildspec.yml
+++ b/buildspec.yml
@@ -27,5 +27,7 @@ phases:
       - NODE_OPTIONS=--openssl-legacy-provider REACT_APP_API_URL=$ambienteurl SKIP_PREFLIGHT_CHECK=true npm run build --prefix client
       - aws s3 sync client/build s3://assetseb/$ambientes3cdn --exclude "index.html"
       - aws s3 sync client/build s3://assetseb/$ambientes3cdn --exclude "*" --include "index.html"
+      - versao=$(git rev-parse HEAD | cut -c 1-7)
+      - echo $versao
 artifacts:
     files: docker-compose.yml
