--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,13 +21,13 @@ phases:
       - echo Fazendo push da imagem para o ECR...
       - docker push $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
+      - versao=${CODEBUILD_RESOLVED_SOURCE_VERSION:0:7}
+      - echo "Versão do commit: $versao"
       - echo $ambienteurl
       - echo $ambientes3cdn  
       - npm install
       - NODE_OPTIONS=--openssl-legacy-provider REACT_APP_API_URL=$ambienteurl SKIP_PREFLIGHT_CHECK=true npm run build --prefix client
       - aws s3 sync client/build s3://assetseb/$ambientes3cdn --exclude "index.html"
       - aws s3 sync client/build s3://assetseb/$ambientes3cdn --exclude "*" --include "index.html"
-      - versao=$(git rev-parse HEAD | cut -c 1-7)
-      - echo $versao
 artifacts:
     files: docker-compose.yml
