--- a/buildspec.yml
+++ b/buildspec.yml
@@ -21,12 +21,13 @@ phases:
       - echo Fazendo push da imagem para o ECR...
       - docker push $REPOSITORY_URI:latest
       - docker push $REPOSITORY_URI:$IMAGE_TAG
-      - versao=${CODEBUILD_RESOLVED_SOURCE_VERSION:0:7}
-      - echo $versao
+      - githash=${CODEBUILD_RESOLVED_SOURCE_VERSION:0:7}
+      - echo $githash
       - echo $ambienteurl
       - echo $ambientes3cdn 
-      - docker compose -f docker-compose-eb.yml config --no-normalize >> docker-compose-dev.yml
-      - cat docker-compose-dev.yml  
+      - sed "s/meddiflux:latest/meddiflux:$githash/g" docker-compose-dev.yml > docker-compose2.yml
+      - cat docker-compose-dev.yml
+      - cat docker-compose2.yml  
       - npm install
       - NODE_OPTIONS=--openssl-legacy-provider REACT_APP_API_URL=$ambienteurl SKIP_PREFLIGHT_CHECK=true npm run build --prefix client
       - aws s3 sync client/build s3://assetseb/$ambientes3cdn --exclude "index.html"
