--- a/buildspec.yml
+++ b/buildspec.yml
@@ -25,9 +25,9 @@ phases:
       - echo $githash
       - echo $ambienteurl
       - echo $ambientes3cdn 
-      - sed "s/meddiflux:latest/meddiflux:$githash/g" docker-compose-modelo.yml > docker-compose2.yml
+      - sed "s/meddiflux:latest/meddiflux:$githash/g" docker-compose-modelo.yml > docker-compose.yml
       - cat docker-compose-modelo.yml
-      - cat docker-compose2.yml  
+      - cat docker-compose.yml  
       - npm install
       - NODE_OPTIONS=--openssl-legacy-provider REACT_APP_API_URL=$ambienteurl SKIP_PREFLIGHT_CHECK=true npm run build --prefix client
       - aws s3 sync client/build s3://assetseb/$ambientes3cdn --exclude "index.html"
