--- a/buildspec-pr.yml
+++ b/buildspec-pr.yml
@@ -9,6 +9,6 @@ phases:
   build:
     commands:
       - npm install --loglevel=error
-      - REACT_APP_API_URL=http://localhost:3001 SKIP_PREFLIGHT_CHECK=true npm run build --prefix client
+      - NODE_OPTIONS=--openssl-legacy-provider REACT_APP_API_URL=$ambienteurl SKIP_PREFLIGHT_CHECK=true npm run build --prefix client  
       - echo Rodando testes unitários
       - npm test
